@@ -851,6 +851,7 @@
 [v1.1.2p1f]
  - Bugfix: DockController uses the ClassLoader of "DockController" and not of "this" to load resource files. This resolves an issue when using the framework with OSGi.
  - Bugfix: Toolbar extension: an expanded ToolbarDockStation could no longer be shrunk.
+ - API: SplitDockStation now better supports Components with a minimum size. The minimum size of a node no longer depends on the current location of the divider, and if a Dockable hits its minimum size the other Dockables must shrink until they hit their minimum size too.
      
 [Todo]
 - Drop StackDockStation over Dockable and merge them
